--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,11 @@ body {
 				color: rgb(202, 224, 122);
 				font-weight: bold;
 			}
+			.panel {
+				button {
+					margin: 0 5px 0 0;
+				}
+			}
 		}
 	}
 }
