--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,19 @@ body {
 					margin: 0 5px 0 0;
 				}
 			}
+			form {
+				label {
+					font-size: 1.2rem;
+					width: 80px;
+					display: inline-block;
+					&:after {
+						content: ': ';
+					}
+				}
+				input {
+					width: 400px;
+				}
+			}
 		}
 	}
 }
